language/move-lang/tests/move_check/parser/expr_if_braces.exp
error: 

   ┌── tests/move_check/parser/expr_if_braces.move:4:19 ───
   │
 4 │         if (cond) if (cond) ()
   │                   ^^ Unrecognized Token: if
   ·
 4 │         if (cond) if (cond) ()
   │                   -- Expected:  "!", "&", "&mut ", "(", "()", "*", "-", "::", "abort", "break", "continue", "copy", "false", "move", "return", "true", "{", r#"0[xX][0-9a-fA-F]+"#, r#"[0-9]+"#, r#"[a-zA-Z_][a-zA-Z0-9_]*"#, r#"[a-zA-Z_][a-zA-Z0-9_]*<"#,
   │

